--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -24,3 +24,21 @@
 .navbar > ul > li > a:hover {
     text-decoration: none;
 }
+
+
+.header {
+  padding: 10px 0;
+  background-color: rgb(164, 233, 228);
+}
+
+.header > div {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 10px;
+}
